Photo Directory: Prevent search field input text from overlapping search icon.
Props pitamdey, pranitdugad.
Fixes #7509.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@13360 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-photos/css/components/_search-form.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-photos/css/components/_search-form.scss
@@ -120,7 +120,7 @@
 	.site-main & .search-field {
 		border: 1px solid $color__border-input;
 		box-shadow: inset 0 1px 2px rgba( 0, 0, 0, 0.07 );
-		padding: 0.5rem;
+		padding: 0.5rem 2rem 0.5rem 0.5rem;
 		width: 100%;
 	}
 }
